# michelangelo_ws

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  main
Code_Example/sockets/: AcceptTCPConnection.c  BroadcastReceiver  BroadcastReceiver.c  BroadcastSender  BroadcastSender.c  CreateTCPServerSocket.c  DieWithError.c  HandleTCPClient.c  MulticastReceiver.c  MulticastSender.c  ResolveName.c  ResolveService.c  SigAction.c  TCPEchoClient  TCPEchoClient.c  TCPEchoServer  TCPEchoServer-Fork  TCPEchoServer-Fork-SIGCHLD  TCPEchoServer-Fork-SIGCHLD.c  TCPEchoServer-Fork.c  TCPEchoServer-ForkN  TCPEchoServer-ForkN.c  TCPEchoServer-Select  TCPEchoServer-Select.c  TCPEchoServer-Thread  TCPEchoServer-Thread.c  TCPEchoServer.c  TCPEchoServer.h  UDPEchoClient  UDPEchoClient-Timeout.c  UDPEchoClient.c  UDPEchoServer  UDPEchoServer-SIGIO.c  UDPEchoServer.c  compileme.sh
launch/: run.sh
shared_memory/: compileme.sh  fork_exec.c  msgq-prod-cons  msgq-prod-cons.cpp  newproc-posix.c  shm-prod-cons.cpp  shm-sem-prod-cons.cpp  thrd-posix.c
src/: .gitignore  Robot (copy).h  Robot.cpp  Robot.h  main.cpp  ourMemoriesTogether.cpp  pca.cpp  server.cpp
testcode/: compile.sh  my_program  test.cpp  test.h
